<resources>
    <!-- Main Activity Strings -->

    <string name="welcome_info">
         Welcome to use Bluetooth controller\n
         You can operate the left and right discs to send coordinate information to the Bluetooth serial port\n
         L1, L2, R1, R2 are fast commands, you can send predefined commands\n
         The last sent coordinates displayed in the top text box\n
         You can also customize the coordinate format in settings:\n
         \tComplete leading zeros: %+04d,%+04d\n
         \tAdd prefix and suffix: pf, %+4d, %+4d, sf\n
         The line separator is \\r\\n\n
         \n
         Have fun!
    </string>

    <string name="app_name">BluetoothController</string>
    <string name="last_command_sent">last command sent</string>
    <string name="L1">L1</string>
    <string name="L2">L2</string>
    <string name="R1">R1</string>
    <string name="R2">R2</string>
    <string name="connect">CONNECT</string>
    <string name="setting">SETTING</string>
    <string name="command">COMMAND</string>
    <string name="no_blue_tooth_adapter">No blue tooth adapter</string>
    <string name="no_connection">No Connection</string>
    <string name="connection_succeed">Connection Succeed</string>

    <string name="bluetooth_default_uuid">00001101-0000-1000-8000-00805F9B34FB</string>
    <string name="bluetooth_unable_to_open_socket">Unable to open socket</string>
    <string name="bluetooth_connection_failed">Connection failed</string>
    <string name="bluetooth_unable_to_receive">Unable to receive, connection may be closed</string>
    <string name="bluetooth_unable_to_send">Unable to send message</string>
    <string name="bluetooth_no_device">No paired devices</string>
    <string name="choose_device">Choose device</string>
    <string name="send_command">Send command</string>
    <string name="send_command_button">Send</string>
    <string name="send_command_cancel">Cancel</string>

    <!-- Preference Titles -->
    <string name="title_activity_settings">Settings</string>
    <string name="fast_command_settings">Fast Command</string>
    <string name="control_settings">Control</string>

    <string name="line_separator">Line Separator</string>

    <string name="force_send_command">Force Send Command Mode</string>
    <string name="force_send_command_off_summary">send command when direction changes</string>
    <string name="force_send_command_on_summary">send command on every tick</string>

    <string name="L1_command_setting">L1 Command</string>
    <string name="L2_command_setting">L2 Command</string>
    <string name="R1_command_setting">R1 Command</string>
    <string name="R2_command_setting">R2 Command</string>
    <string name="command_format">Command Format</string>
    <string name="command_format_summary">\'%1$d\' refers to x coordinate, \'%2$d\' refers to y coordinate, \'%%\' refers to \'%\'. more details see Java string format</string>
    <string name="command_format_default">%1$d,%2$d</string>
    <string name="frequency">Frequency</string>
    <string name="frequency_summary">the frequency of sending control command</string>
    <string name="quantification">Quantification</string>
    <string name="quantification_summary">if set values to q, coordinate will be integers between -q and +q</string>
    <string name="separation_control">Separation Control</string>
    <string name="separation_control_off_summary">direction equals the vector sum of two operators</string>
    <string name="separation_control_on_summary">each operator controls one axes</string>
    <string name="swapping_control">Swapping Control</string>
    <string name="swapping_control_off_summary">left operator controls LR, right one controls UD</string>
    <string name="swapping_control_on_summary">left operator controls UD, right one controls LR</string>
</resources>
