<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#000000">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.keke.bluetoothcontroller.OperatorView
            android:id="@+id/left_operator"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="30dp"/>
        <com.keke.bluetoothcontroller.OperatorView
            android:id="@+id/right_operator"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/setting_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:layout_weight="1"
                android:onClick="onSettingClick"/>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/connect_btn"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect"
                android:layout_weight="1"
                android:onClick="onConnectClick"/>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/command_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/command"
                android:layout_weight="1"
                android:onClick="onCommandClick"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <View
                android:layout_width="20dp"
                android:layout_height="match_parent">
            </View>
            <Button
                android:id="@+id/L1"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/L1"
                android:layout_weight="1"
                android:onClick="onL1Click"/>
            <View
                android:layout_width="20dp"
                android:layout_height="match_parent">
            </View>
            <Button
                android:id="@+id/L2"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/L2"
                android:layout_weight="1"
                android:onClick="onL2Click"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:gravity="end">
            <Button
                android:id="@+id/R2"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/R2"
                android:layout_weight="1"
                android:onClick="onR2Click"/>
            <View
                android:layout_width="20dp"
                android:layout_height="match_parent">
            </View>
            <Button
                android:id="@+id/R1"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/R1"
                android:layout_weight="1"
                android:onClick="onR1Click"/>
            <View
                android:layout_width="20dp"
                android:layout_height="match_parent">
            </View>
        </LinearLayout>
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp">
            </View>
            <TextView
                android:id="@+id/command_edit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/last_command_sent"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="#FFFFFF"/>
            <TextView
                android:id="@+id/log_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#FFFFFF"
                android:text="@string/welcome_info"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>